@@ -28,8 +28,6 @@ Duncan's TODO: break 'em changes
  * [maybe] make the "top" link point to a list of service groups, linked to
    pages that just display that one section (as opposed to the view that
    "running" gives, which is all sections)
- * rename conf module to config
- * rename compareconf to diff
 
 
 Lab Plan 1
